--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.73.0",
+    "axios": "^0.13.1",
     "yargs": "^4.8.1"
   }
 }
